[MOD] add password to modifyDatas
