# doc/swagger.yaml
@@ -206,6 +206,11 @@ paths:
           name: new_email
           schema:
             type: string
+          description: New password value.
+        - in: query
+          name: password
+          schema:
+            type: string
           description: New email value.
         - in: query
           name: language
